# flipper-claude-buddy

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude-plugin/: marketplace.json
.github/workflows/: build-fap.yml
flipper-app/: CHANGELOG.md  README.md  app_settings.c  app_settings.h  application.fam  claude_buddy.c  notifications.c  notifications.h  nus_charpack.c  nus_charpack.h  nus_profile.c  nus_profile.h  nus_protocol.c  nus_protocol.h  nus_state.c  nus_state.h  nus_stats.c  nus_stats.h  nus_transcript.c  nus_transcript.h  protocol.c  protocol.h  serial.c  serial.h  transport.h  transport_bt.c  transport_nus.c  ui.c  ui.h
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/host-bridge/: pyproject.toml
plugin/host-bridge/bridge/: __main__.py  claude_ipc.py  config.py  daemon.py  input.py  protocol.py  serial_conn.py  transport.py  transport_auto.py  transport_bt.py  transport_usb.py  voice.py
plugin/scripts/: bt-authorize.py  on-elicitation.py  on-notification.py  on-permission-request.py  on-post-compact.py  on-post-tool-use-failure.py  on-post-tool-use.py  on-pre-compact.py  on-pre-tool-use.sh  on-prompt-submit.sh  on-session-end.sh  on-session-start.sh  on-stop-failure.sh  on-stop.sh  on-subagent-start.py  on-subagent-stop.py  on-task-completed.sh  session-target.py
plugin/skills/flipper/: SKILL.md
plugin/skills/notify/: SKILL.md
scripts/: build-flipper.sh  flipper-log.py  install.sh  refresh-name.py  scan-nus.py
